# harvest-flow/api/src/tsoa/swagger.json
@@ -98,6 +98,69 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"FailedResult": {
+				"properties": {
+					"success": {
+						"type": "boolean",
+						"enum": [
+							false
+						],
+						"nullable": false
+					},
+					"errorMessage": {
+						"type": "string"
+					},
+					"errorCode": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"success",
+					"errorMessage"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"InternalServerErrorResult": {
+				"$ref": "#/components/schemas/FailedResult"
+			},
+			"FieldErrors": {
+				"description": "comes from the `tsoa` package, but we don't want it as a dependency just for this type",
+				"properties": {},
+				"type": "object",
+				"additionalProperties": {
+					"properties": {
+						"value": {},
+						"message": {
+							"type": "string"
+						}
+					},
+					"required": [
+						"message"
+					],
+					"type": "object"
+				}
+			},
+			"ValidateErrorResult": {
+				"properties": {
+					"message": {
+						"type": "string",
+						"enum": [
+							"Validation Failed"
+						],
+						"nullable": false
+					},
+					"details": {
+						"$ref": "#/components/schemas/FieldErrors"
+					}
+				},
+				"required": [
+					"message"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"Summary": {
 				"properties": {
 					"totalLoaned": {
@@ -369,7 +432,7 @@
 	"paths": {
 		"/user_details": {
 			"get": {
-				"operationId": "Get",
+				"operationId": "GetUserDetails",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -377,6 +440,32 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/UserDetails"
+								}
+							}
+						}
+					},
+					"422": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ValidateErrorResult"
+								},
+								"examples": {
+									"Example 1": {}
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/InternalServerErrorResult"
+								},
+								"examples": {
+									"Example 1": {}
 								}
 							}
 						}
@@ -397,7 +486,7 @@
 		},
 		"/summary": {
 			"get": {
-				"operationId": "Get",
+				"operationId": "GetSummary",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -405,6 +494,32 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/Summary"
+								}
+							}
+						}
+					},
+					"422": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ValidateErrorResult"
+								},
+								"examples": {
+									"Example 1": {}
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/InternalServerErrorResult"
+								},
+								"examples": {
+									"Example 1": {}
 								}
 							}
 						}
@@ -416,7 +531,7 @@
 		},
 		"/rwaData": {
 			"get": {
-				"operationId": "Get",
+				"operationId": "GetRwaData",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -424,6 +539,32 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/DeviceDetails"
+								}
+							}
+						}
+					},
+					"422": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ValidateErrorResult"
+								},
+								"examples": {
+									"Example 1": {}
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/InternalServerErrorResult"
+								},
+								"examples": {
+									"Example 1": {}
 								}
 							}
 						}
@@ -460,6 +601,32 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/NftHistory"
+								}
+							}
+						}
+					},
+					"422": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ValidateErrorResult"
+								},
+								"examples": {
+									"Example 1": {}
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/InternalServerErrorResult"
+								},
+								"examples": {
+									"Example 1": {}
 								}
 							}
 						}
@@ -508,7 +675,7 @@
 		},
 		"/nft": {
 			"get": {
-				"operationId": "Get",
+				"operationId": "GetTokenDetails",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -516,6 +683,32 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/NftDetails"
+								}
+							}
+						}
+					},
+					"422": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ValidateErrorResult"
+								},
+								"examples": {
+									"Example 1": {}
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/InternalServerErrorResult"
+								},
+								"examples": {
+									"Example 1": {}
 								}
 							}
 						}
@@ -544,7 +737,7 @@
 		},
 		"/nft_details": {
 			"get": {
-				"operationId": "Get",
+				"operationId": "GetProjectDetails",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -557,6 +750,49 @@
 										}
 									],
 									"nullable": true
+								}
+							}
+						}
+					},
+					"204": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "number",
+									"enum": [
+										null
+									],
+									"nullable": true
+								},
+								"examples": {
+									"Example 1": {}
+								}
+							}
+						}
+					},
+					"422": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ValidateErrorResult"
+								},
+								"examples": {
+									"Example 1": {}
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/InternalServerErrorResult"
+								},
+								"examples": {
+									"Example 1": {}
 								}
 							}
 						}
@@ -577,7 +813,7 @@
 		},
 		"/all_nft": {
 			"get": {
-				"operationId": "Get",
+				"operationId": "GetAllNfts",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -588,6 +824,32 @@
 										"$ref": "#/components/schemas/NftContract"
 									},
 									"type": "array"
+								}
+							}
+						}
+					},
+					"422": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ValidateErrorResult"
+								},
+								"examples": {
+									"Example 1": {}
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/InternalServerErrorResult"
+								},
+								"examples": {
+									"Example 1": {}
 								}
 							}
 						}
